[project]
name = "trossen-vr"
version = "0.1.0"
description = "Python bindings and SDK for Trossen VR teleoperation"
authors = [
    { name = "Trossen Robotics" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.0",
    "pybind11>=2.11",
    "trossen-arm>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.6.0",
]

[project.urls]
Homepage = "https://github.com/TrossenRobotics/trossen_vr"
Repository = "https://github.com/TrossenRobotics/trossen_vr"
